# nim_games

./: CMakeLists.txt  CMakeLists.txt.user.1580e11  CMakeLists.txt.user.aa831f0  README.md  resources.qrc  todo
headers/: ai.h  bucket.h  gamewindow.h  heap.h  mainwindow.h  menuwindow.h  rock.h  ruleswindow.h  statwindow.h  winnerwindow.h
source/: ai.cpp  ai.cpp.JRJSoy  bucket.cpp  gamewindow.cpp  heap.cpp  main.cpp  mainwindow.cpp  menuwindow.cpp  rock.cpp  ruleswindow.cpp  statwindow.cpp  winnerwindow.cpp
